--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,20 +6,96 @@ on:
       - 'v*'
 
 jobs:
-  build:
-    uses: Datadog/action-prebuildify/.github/workflows/build.yml@main
-    with:
-      cache: false
-      directory-path: '.'
-      min-node-version: 18
-      napi: true
-      package-manager: 'npm'
-      prebuild: 'npm run build:lief'
-      target-name: 'node_lief'
-      skip: linuxmusl-x64,linuxmusl-arm64,linuxglibc-ia32
+  build-native:
+    name: Build ${{ matrix.platform }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          # Linux x64 glibc (Ubuntu 24.04)
+          - platform: linux-x64-glibc
+            os: ubuntu-24.04
+            node: '22.x'
+
+          # Linux x64 musl (Alpine)
+          - platform: linux-x64-musl
+            os: ubuntu-latest
+            node: '22.x'
+            use-docker: true
+
+          # macOS 15 Intel
+          - platform: darwin-x64
+            os: macos-15-intel
+            node: '22.x'
+
+          # macOS 15 ARM64
+          - platform: darwin-arm64
+            os: macos-15
+            node: '22.x'
+
+          # Windows x64
+          - platform: win32-x64
+            os: windows-latest
+            node: '22.x'
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Setup Node.js
+        if: ${{ !matrix.use-docker }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+
+      # Standard build for non-Docker platforms
+      - name: Install dependencies
+        if: ${{ !matrix.use-docker }}
+        run: npm ci
+
+      - name: Build LIEF
+        if: ${{ !matrix.use-docker }}
+        run: npm run build:lief
+
+      - name: Prebuildify
+        if: ${{ !matrix.use-docker }}
+        run: npm run prebuildify
+
+      # Alpine Linux build via Docker
+      - name: Build for Alpine Linux (musl)
+        if: matrix.use-docker && matrix.platform == 'linux-x64-musl'
+        run: |
+          docker run --rm -v "$PWD":/workspace -w /workspace \
+            alpine:latest \
+            sh -c '
+              apk add --no-cache \
+                nodejs npm python3 make g++ git cmake bash curl \
+                samurai linux-headers
+
+              # Configure git for submodules
+              git config --global --add safe.directory /workspace
+              git config --global --add safe.directory /workspace/LIEF
+              git submodule update --init --recursive
+
+              # Install dependencies and build
+              npm ci
+              npm run build:lief
+              npm run prebuildify
+            '
+
+      - name: Upload prebuilds
+        uses: actions/upload-artifact@v4
+        with:
+          name: prebuilds-${{ matrix.platform }}
+          path: prebuilds/
+          retention-days: 1
 
   publish:
-    needs: build
+    needs: build-native
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -41,11 +117,39 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Download prebuilds
+      # Download all platform prebuilds and merge them
+      - name: Download Linux x64 glibc prebuilds
         uses: actions/download-artifact@v4
         with:
-          name: prebuilds
+          name: prebuilds-linux-x64-glibc
           path: prebuilds
+
+      - name: Download Linux x64 musl prebuilds
+        uses: actions/download-artifact@v4
+        with:
+          name: prebuilds-linux-x64-musl
+          path: prebuilds
+
+      - name: Download macOS x64 prebuilds
+        uses: actions/download-artifact@v4
+        with:
+          name: prebuilds-darwin-x64
+          path: prebuilds
+
+      - name: Download macOS ARM64 prebuilds
+        uses: actions/download-artifact@v4
+        with:
+          name: prebuilds-darwin-arm64
+          path: prebuilds
+
+      - name: Download Windows x64 prebuilds
+        uses: actions/download-artifact@v4
+        with:
+          name: prebuilds-win32-x64
+          path: prebuilds
+
+      - name: List prebuilds
+        run: ls -lah prebuilds/
 
       - name: Publish to npm
         run: npm publish --access public --provenance
