--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,20 +52,50 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
+      - name: Setup MSVC
+        if: matrix.platform == 'win32-x64'
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x64
+
       # Standard build for non-Docker platforms
+      - name: Install pnpm
+        if: ${{ !matrix.use-docker }}
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.20.0
+
       - name: Install dependencies
         if: ${{ !matrix.use-docker }}
-        run: npm ci
+        run: pnpm install --frozen-lockfile
+
+      - name: Cache LIEF build
+        if: ${{ !matrix.use-docker }}
+        uses: actions/cache@v4
+        with:
+          path: lief-build
+          key: lief-v1-${{ matrix.platform }}-${{ hashFiles('.gitmodules', 'scripts/build-lief.sh') }}
+          restore-keys: |
+            lief-v1-${{ matrix.platform }}-
 
       - name: Build LIEF
         if: ${{ !matrix.use-docker }}
-        run: npm run build:lief
+        run: pnpm build:lief
 
       - name: Prebuildify
         if: ${{ !matrix.use-docker }}
-        run: npm run prebuildify
+        run: pnpm prebuildify
 
       # Alpine Linux build via Docker
+      - name: Cache LIEF build (Alpine)
+        if: matrix.use-docker && matrix.platform == 'linux-x64-musl'
+        uses: actions/cache@v4
+        with:
+          path: lief-build
+          key: lief-v1-${{ matrix.platform }}-${{ hashFiles('.gitmodules', 'scripts/build-lief.sh') }}
+          restore-keys: |
+            lief-v1-${{ matrix.platform }}-
+
       - name: Build for Alpine Linux (musl)
         if: matrix.use-docker && matrix.platform == 'linux-x64-musl'
         run: |
@@ -81,10 +111,13 @@ jobs:
               git config --global --add safe.directory /workspace/LIEF
               git submodule update --init --recursive
 
+              # Install pnpm
+              npm install -g pnpm@10.20.0
+
               # Install dependencies and build
-              npm ci
-              npm run build:lief
-              npm run prebuildify
+              pnpm install --frozen-lockfile
+              pnpm build:lief
+              pnpm prebuildify
             '
 
       - name: Upload prebuilds
@@ -111,11 +144,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
-          cache: 'npm'
           registry-url: https://registry.npmjs.org
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.20.0
+
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       # Download all platform prebuilds and merge them
       - name: Download Linux x64 glibc prebuilds
@@ -152,7 +189,7 @@ jobs:
         run: ls -lah prebuilds/
 
       - name: Publish to npm
-        run: npm publish --access public --provenance
+        run: pnpm publish --access public --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
