--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "install": "echo 'Skipping automatic build - use npm run build to build from source'",
-    "build": "npm run build:lief && node-gyp rebuild",
+    "install": "echo 'Skipping automatic build - use `pnpm build` to build from source.'",
+    "build": "pnpm build:lief && node-gyp rebuild",
     "build:lief": "node scripts/build-lief.js",
     "clean": "rm -rf build",
-    "prebuildify": "prebuildify --napi --strip --target 18.17.0",
+    "prebuildify": "prebuildify --napi --strip",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write \"lib/**/*.{js,ts,d.ts}\"",
     "format:check": "prettier --check \"lib/**/*.{js,ts,d.ts}\""
   },
   "dependencies": {
     "node-addon-api": "^8.0.0",
-    "node-gyp-build": "^3.9.0"
+    "node-gyp-build": "^4.8.4"
   },
   "devDependencies": {
     "node-gyp": "^10.0.0",
-    "prebuildify": "^2.11.0",
-    "typescript": "^5.9.3",
-    "prettier": "^3.6.2"
+    "prebuildify": "^6.0.1",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.3"
   },
   "keywords": [
     "elf",
