Downgrade to glibc 2.28 for the Linux glibc builds

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,12 +12,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # Linux x64 glibc (Ubuntu 24.04)
+          # Linux x64 glibc
           - platform: linux-x64-glibc
-            os: ubuntu-24.04
+            os: ubuntu-latest
             node: '22.x'
+            use-docker: true
 
-          # Linux x64 musl (Alpine)
+          # Linux x64 musl
           - platform: linux-x64-musl
             os: ubuntu-latest
             node: '22.x'
@@ -91,6 +92,43 @@ jobs:
         if: ${{ !matrix.use-docker }}
         run: pnpm prebuildify
 
+      # Manylinux build via Docker
+      - name: Build for Linux (glibc)
+        if: matrix.use-docker && matrix.platform == 'linux-x64-glibc'
+        run: |
+          docker run --rm -v "$PWD":/workspace -w /workspace \
+            -e SCCACHE_GHA_ENABLED="true" \
+            -e ACTIONS_RESULTS_URL="${ACTIONS_RESULTS_URL}" \
+            -e ACTIONS_RUNTIME_TOKEN="${ACTIONS_RUNTIME_TOKEN}" \
+            quay.io/pypa/manylinux_2_28_x86_64 \
+            bash -c '
+              # Install Node.js
+              curl -fsSL https://rpm.nodesource.com/setup_22.x | bash -
+              dnf install -y nodejs
+
+              # Install build dependencies
+              dnf install -y python3.12 ninja-build
+
+              # Install sccache
+              curl -L https://github.com/mozilla/sccache/releases/download/v0.9.0/sccache-v0.9.0-x86_64-unknown-linux-musl.tar.gz | tar xz
+              mv sccache-*/sccache /usr/local/bin/
+              chmod +x /usr/local/bin/sccache
+
+              # Configure git for submodules
+              git config --global --add safe.directory /workspace
+              git config --global --add safe.directory /workspace/LIEF
+              git submodule update --init --recursive
+
+              # Install pnpm
+              npm install -g pnpm@10.20.0
+
+              # Install dependencies and build (specify Python 3.12 for node-gyp)
+              export npm_config_python=/usr/bin/python3.12
+              pnpm install --frozen-lockfile
+              pnpm build:lief
+              pnpm prebuildify
+            '
+
       # Alpine Linux build via Docker
       - name: Build for Alpine Linux (musl)
         if: matrix.use-docker && matrix.platform == 'linux-x64-musl'
@@ -119,8 +157,8 @@ jobs:
               pnpm prebuildify --tag-libc
             '
 
-      - name: Fix permissions (musl)
-        if: matrix.use-docker && matrix.platform == 'linux-x64-musl'
+      - name: Fix permissions
+        if: matrix.use-docker
         run: sudo chown -R $(id -u):$(id -g) prebuilds
 
       - name: Upload prebuilds
