--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,6 +77,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
             core.exportVariable('ACTIONS_RESULTS_URL', process.env.ACTIONS_RESULTS_URL || '');
             core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
@@ -98,6 +99,7 @@ jobs:
         run: |
           docker run --rm -v "$PWD":/workspace -w /workspace \
             -e SCCACHE_GHA_ENABLED="true" \
+            -e ACTIONS_CACHE_URL="${ACTIONS_CACHE_URL}" \
             -e ACTIONS_RESULTS_URL="${ACTIONS_RESULTS_URL}" \
             -e ACTIONS_RUNTIME_TOKEN="${ACTIONS_RUNTIME_TOKEN}" \
             quay.io/pypa/manylinux_2_28_x86_64 \
@@ -135,6 +137,7 @@ jobs:
         run: |
           docker run --rm -v "$PWD":/workspace -w /workspace \
             -e SCCACHE_GHA_ENABLED="true" \
+            -e ACTIONS_CACHE_URL="${ACTIONS_CACHE_URL}" \
             -e ACTIONS_RESULTS_URL="${ACTIONS_RESULTS_URL}" \
             -e ACTIONS_RUNTIME_TOKEN="${ACTIONS_RUNTIME_TOKEN}" \
             alpine:latest \
