--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,17 @@ jobs:
             node: '22.x'
             use-docker: true
 
+          # Linux ARM64 glibc
+          - platform: linux-arm64-glibc
+            os: ubuntu-22.04-arm
+            node: '22.x'
+
+          # Linux ARM64 musl
+          - platform: linux-arm64-musl
+            os: ubuntu-22.04-arm
+            node: '22.x'
+            use-docker: true
+
           # macOS 15 Intel
           - platform: darwin-x64
             os: macos-15-intel
@@ -130,13 +141,41 @@ jobs:
             '
 
       # Alpine Linux build via Docker
-      - name: Build for Alpine Linux (musl)
+      - name: Build for Alpine Linux (musl x64)
         if: matrix.use-docker && matrix.platform == 'linux-x64-musl'
         run: |
           docker run --rm -v "$PWD":/workspace -w /workspace \
             -e SCCACHE_GHA_ENABLED="true" \
             -e ACTIONS_RESULTS_URL="${ACTIONS_RESULTS_URL}" \
             -e ACTIONS_RUNTIME_TOKEN="${ACTIONS_RUNTIME_TOKEN}" \
+            alpine:latest \
+            sh -c '
+              apk add --no-cache \
+                nodejs npm python3 make g++ git cmake bash curl \
+                samurai linux-headers sccache
+
+              # Configure git for submodules
+              git config --global --add safe.directory /workspace
+              git config --global --add safe.directory /workspace/LIEF
+              git submodule update --init --recursive
+
+              # Install pnpm
+              npm install -g pnpm@10.20.0
+
+              # Install dependencies and build
+              pnpm install --frozen-lockfile
+              pnpm build:lief
+              pnpm prebuildify --tag-libc
+            '
+
+      - name: Build for Alpine Linux (musl ARM64)
+        if: matrix.use-docker && matrix.platform == 'linux-arm64-musl'
+        run: |
+          docker run --rm -v "$PWD":/workspace -w /workspace \
+            -e SCCACHE_GHA_ENABLED="true" \
+            -e ACTIONS_RESULTS_URL="${ACTIONS_RESULTS_URL}" \
+            -e ACTIONS_RUNTIME_TOKEN="${ACTIONS_RUNTIME_TOKEN}" \
+            --platform linux/arm64 \
             alpine:latest \
             sh -c '
               apk add --no-cache \
@@ -206,6 +245,18 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: prebuilds-linux-x64-musl
+          path: prebuilds
+
+      - name: Download Linux ARM64 glibc prebuilds
+        uses: actions/download-artifact@v4
+        with:
+          name: prebuilds-linux-arm64-glibc
+          path: prebuilds
+
+      - name: Download Linux ARM64 musl prebuilds
+        uses: actions/download-artifact@v4
+        with:
+          name: prebuilds-linux-arm64-musl
           path: prebuilds
 
       - name: Download macOS x64 prebuilds
